--- a/Eduford/styles/style.css
+++ b/Eduford/styles/style.css
@@ -122,7 +122,7 @@ nav .fas {
     }
 
     .nav-links {
-        position: absolute;
+        position: fixed;
         background: #f44336;
         height: 100vh;
         width: 200px;
@@ -330,6 +330,7 @@ h3 {
         margin-right: 15px;
     }
 }
+
 .cta {
     margin: 100px auto;
     width: 80%;
@@ -343,43 +344,206 @@ h3 {
     text-align: center;
     padding: 100px 0;
 }
+
 .cta h1 {
     color: white;
     margin-bottom: 40px;
     padding: 0;
 }
+
 @media (max-width: 700px) {
     .cta h1 {
         font-size: 16px;
         padding: 20px;
     }
 }
-.footer{
+
+.footer {
     width: 100%;
     text-align: center;
     padding: 30px 0;
     background-color: #292929;
     color: white;
 }
-.footer p{
+
+.footer p {
     color: white;
 }
-.footer h4{
+
+.footer h4 {
     margin-bottom: 25px;
     margin-top: 20px;
     font-weight: 600;
 
 }
-.icons .primary{
+
+.icons .primary {
     color: #f44336;
     margin: 0 13px;
     padding: 18px 0;
 }
-.primary{
+
+.primary {
     color: #f44336;
 }
-@media(max-width: 700px) {
-.footer p{
-    padding: 40px;
+
+@media (max-width: 700px) {
+    .footer p {
+        padding: 40px;
+    }
 }
+
+.sub-header {
+    height: 40vh;
+    width: 100%;
+    background-image: linear-gradient(
+            rgba(4, 9, 30, 0.7),
+            rgba(4, 9, 30, 0.7)),
+    url("../img/background.jpg");
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: white;
+}
+.sub-header h1{
+    margin-top: 100px;
+}
+.about-us{
+    width: 80%;
+    margin: auto;
+    padding: 80px 0 50px 0;
+}
+.about-col{
+    flex-basis: 48%;
+    padding: 30px 2px;
+}
+.about-col img{
+    width: 100%;
+    border-radius: 10px;
+}
+.about-col h1{
+    padding-top: 0;
+}
+.about-col p{
+    padding: 15px 0 25px;
+}
+.red-btn{
+    color: #f44336;
+    border: 1px solid #f44336;
+}
+.red-btn:hover{
+    color: white;
+}
+.blog-content{
+    width: 80%;
+    margin: auto;
+    padding: 60px 0;
+}
+.blog-left{
+    flex-basis: 65%;
+}
+.blog-left img{
+    width: 100%;
+}
+.blog-left h2{
+    color: #222;
+    font-weight: 600;
+    margin: 30px 0;
+}
+.blog-left p{
+    color: #999;
+    padding: 0;
+}
+.blog-right{
+    flex-basis: 32%;
+}
+.blog-right h3{
+    background-color: #f44336;
+    color: white;
+    padding: 7px 0;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.blog-right div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #555;
+    padding: 8px;
+    box-sizing: border-box;
+    transition: .5s ease;
+}
+.blog-right div:hover{
+    background-color: #f44336;
+    color: white;
+}
+.comment-box{
+    border: 1px solid #ccc;
+    margin: 50px 0;
+    padding: 10px 20px;
+}
+.comment-box h3{
+    text-align: left;
+}
+.comment-form input, textarea{
+    width: 100%;
+    padding: 10px;
+    margin: 15px 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background: #f0f0f0;
+}
+.comment-form button{
+    margin: 10px 0;
+}
+
+@media(max-width: 700px) {
+    .sub-header h1{
+        font-size: 24px;
+    }
+}
+.location{
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
+}
+.location iframe{
+    width: 100%;
+}
+.contact-us{
+    width: 80%;
+    margin: auto;
+}
+.contact-col{
+    flex-basis: 48%;
+    margin: 30px;
+}
+.contact-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+.contact-col .primary{
+    font-size: 28px;
+    margin:10px 30px 0 0  ;
+}
+.contact-col div p{
+    padding: 0;
+}
+.contact-col div h5{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #555555;
+    font-weight: 400;
+}
+
+.contact-col input, .contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
 }
