--- a/Eduford/styles/style.css
+++ b/Eduford/styles/style.css
@@ -116,6 +116,10 @@ nav .fas {
         font-size: 20px;
     }
 
+    .nav-logo{
+        margin-top: 10px;
+    }
+
     .nav-links ul li {
         margin-top: 10px;
         display: block;
