--- a/Lilopip/styles/style.css
+++ b/Lilopip/styles/style.css
@@ -1,61 +1,70 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
 }
 
-.container{
+.container {
     width: 100%;
     min-height: 100vh;
     padding: 0 8% 0 8%;
     box-sizing: border-box;
 }
 
-.navbar{
+.navbar {
     width: 100%;
     display: flex;
     align-items: center;
 }
 
-.logo{
+.logo {
     width: 50px;
     cursor: pointer;
     margin: 30px 0;
 }
-.menu-icon{
+
+.menu-icon {
     width: 25px;
     cursor: pointer;
+    display: none;
 }
-nav{
+
+nav {
     flex: 1;
     text-align: right;
 }
-nav ul li{
+
+nav ul li {
     list-style: none;
     display: inline-block;
     margin-right: 30px;
 }
-nav ul li a{
+
+nav ul li a {
     text-decoration: none;
     color: black;
     font-size: 14px;
 }
-nav ul li a:hover{
-    color:#ff5ea2;
+
+nav ul li a:hover {
+    color: #ff5ea2;
     transition: .4s;
 }
-.row{
+
+.row {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 100px 0;
 }
-.col-1{
+
+.col-1 {
     flex-basis: 40%;
     position: relative;
     margin-left: 50px;
 }
-.col-1::after{
+
+.col-1::after {
     content: '';
     width: 10px;
     height: 57%;
@@ -64,24 +73,29 @@ nav ul li a:hover{
     left: -40px;
     top: 8px;
 }
-.col-1 h2{
+
+.col-1 h2 {
     font-size: 54px;
 }
-.col-1 h3{
+
+.col-1 h3 {
     font-size: 30px;
-    color:#707070 ;
-    margin:20px 0 10px;
+    color: #707070;
+    margin: 20px 0 10px;
 }
-.col-1 p{
+
+.col-1 p {
     font-size: 16px;
     color: #b7b7b7;
     font-weight: 100;
 }
-.col-1 h4{
+
+.col-1 h4 {
     margin: 30px 0;
     font-size: 20px;
 }
-button{
+
+button {
     width: 140px;
     border: 0;
     padding: 12px 10px;
@@ -92,69 +106,125 @@ button{
     cursor: pointer;
     transition: width 0.5s;
 }
-button img{
+
+button img {
     width: 30px;
     display: none;
 }
 
-button:hover img{
+button:hover img {
     display: block;
 }
-button:hover{
+
+button:hover {
     width: 160px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.col-2{
+
+.col-2 {
     position: relative;
     flex-basis: 60%;
     display: flex;
     align-items: center;
 
 }
-.col-2 .controller{
+
+.col-2 .controller {
     width: 90%;
 }
-.color-box{
+
+.color-box {
     position: absolute;
     right: 0;
     top: 0;
-    background: linear-gradient(#ff54a2,#ff575a);
+    background: linear-gradient(#ff54a2, #ff575a);
     border-radius: 20px 0 0 20px;
     height: 100%;
     width: 80%;
-    z-index:-1;
+    z-index: -1;
     transform: translateX(150px);
 }
-.add-btn img{
+
+.add-btn img {
     width: 35px;
     margin-bottom: 5px;
 }
-.add-btn{
+
+.add-btn {
     text-align: center;
     color: white;
 }
-.social-links img{
+
+.social-links img {
     height: 13px;
     margin: 20px;
     cursor: pointer;
 }
-.social-links{
+
+.social-links {
     text-align: center;
 }
 
-@media only screen and (max-width:700px) {
-    nav ul{
+@media only screen and (max-width: 700px) {
+    nav ul {
         width: 100%;
-        background: linear-gradient(#ff54a2,#ff575a);
+        background: linear-gradient(#ff54a2, #ff575a);
         position: absolute;
         top: 75px;
         bottom: 0;
         z-index: 2;
     }
-    nav ul li{
+
+    nav ul li {
         display: block;
-        margin: 10px 0 10px 0;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
+
+    nav ul li a {
+        color: white;
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    #menuList {
+        overflow: hidden;
+        transition: 0.5s ease;
+    }
+
+    .row {
+        flex-direction: column-reverse;
+        margin: 50px 0;
+    }
+
+    .cold-2 {
+        flex-basis: 100%;
+        margin-bottom: 50px;
+    }
+
+    .col-2 .controller {
+        width: 77%;
+    }
+
+    .color-box {
+        transform: translateX(75px);
+    }
+
+    .col-1 {
+        flex-basis: 100%;
+    }
+
+    .col-1 h2 {
+        font-size: 35px;
+    }
+
+    .col-1 h3 {
+        font-size: 15px;
+    }
+
+
 }
